Add request description of '/convertTo?' to the root.html file

--- a/Sockets/WebServer/www/root.html
+++ b/Sockets/WebServer/www/root.html
@@ -8,7 +8,8 @@
 			<li>/file/sample.html -- returns the content of the file sample.html</li>
 			<li>/json -- returns a json of the /random request</a></li>
 			<li>/random -- returns index.html</a></li>
-			<li>/multiply?num1=1&num2=2 -- returns the product of num1 and num2</a></li>
+			<li>/multiply?num1=1&num2=2 -- returns the product of two integers (invalid parameters use default values)</a></li>
+			<li>/convertTo?decimal=1&format=x -- converts decimal to binary (b), hexadecimal (h)</a></li>
 		</ul>
 		<h3>File Structure in www (you can use /file/www/FILENAME):</h3>
 		${links}
