--- a/Sockets/WebServer/www/root.html
+++ b/Sockets/WebServer/www/root.html
@@ -9,7 +9,7 @@
 			<li>/json -- returns a json of the /random request</a></li>
 			<li>/random -- returns index.html</a></li>
 			<li>/multiply?num1=1&num2=2 -- returns the product of two integers (invalid parameters use default values)</a></li>
-			<li>/convertTo?decimal=1&format=x -- converts decimal to binary (b), hexadecimal (h)</a></li>
+			<li>/convertTo?decimal=1&format=x -- converts decimal to binary (b), hexadecimal (h), or octal (o)</a></li>
 			<li>/randomInt?min=-100&max=100 -- returns a random integer in the range: [min, max)</a></li>
 		</ul>
 		<h3>File Structure in www (you can use /file/www/FILENAME):</h3>
